--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
   <section class="last-section">
     <div class="container">
       <div class="row">
-        <div class="col-lg-6 order-sm-2 order-lg-1">
+        <div class="col-lg-6 order-2 order-lg-1">
           <div class="last-section-item">
             <div class="d-flex p-3 last-sec-inner">
               <div class="align-self-center">
@@ -246,7 +246,7 @@
             </div>
           </div>        
         </div>
-        <div class="col-lg-6 order-sm-1 order-lg-2">
+        <div class="col-lg-6 order-1 order-lg-2">
           <div class="content-img">
             <img class="img-fluid" src="images/XMLID 1.png" alt="images">
           </div>
