--- a/index.html
+++ b/index.html
@@ -329,7 +329,7 @@
   </section>
   
   <footer>
-    <p>&copy Copy Right || Reserved by <a href="#">Mofasser Hossain</a> </p>
+    <p>&copy Copy Right || All Rights Reserved by <a href="#">Mofasser Hossain</a> </p>
   </footer>
 
   <!-- /js -->
