--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
             <input
               type="text"
               class="form-control"
-              placeholder="Mobile Number"
+              placeholder="Your Mobile"
               name="Mobile"
             />
           </div>
