--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
                 <img src="images/image 11.png" alt="suit">
               </div>
               <div class="crd-body">
-                <h1>Yellow Coat Jacket</h1>
+                <h1>Snowboard Jacket Mens</h1>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos, architecto?</p>
               </div>
               <div class="crd-footer">
@@ -165,7 +165,7 @@
                 <img src="images/vippng 1.png" alt="suit">
               </div>
               <div class="crd-body">
-                <h1>Woman Leather Jacket</h1>
+                <h1>Man Leather Jackets</h1>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos, architecto?</p>
               </div>
               <div class="crd-footer">
@@ -179,7 +179,7 @@
                 <img src="images/toppng 1.png" alt="suit">
               </div>
               <div class="crd-body">
-                <h1>Ladies Jacket</h1>
+                <h1>Man Casual Jackets</h1>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos, architecto?</p>
               </div>
               <div class="crd-footer">
