--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <body>
 
   <!-- /header section -->
-  <header>
+  <header id="home">
     <!-- /navbar -->
     <nav class="navbar navbar-expand-md navbar-light fixed-top menu">
       <div class="container">
@@ -36,13 +36,13 @@
         <div class="collapse navbar-collapse justify-content-end menu-div " id="navbarNav">
           <ul class="navbar-nav menu-list" >
             <li class="nav-item menu-items ">
-              <a class="nav-link menu-link  active" aria-current="page" href="#">Home</a>
+              <a class="nav-link menu-link  active" aria-current="page" href="#home">Home</a>
             </li>
             <li class="nav-item menu-items ">
               <a class="nav-link menu-link" href="#product">Products</a>
             </li>
             <li class="nav-item menu-items ">
-              <a class="nav-link menu-link" href="#">About US</a>
+              <a class="nav-link menu-link" href="#about">About US</a>
             </li>
             <li class="nav-item menu-items ">
               <a class="nav-link menu-link" href="#contact" tabindex="-1" aria-disabled="true">Contact</a>
@@ -196,7 +196,7 @@
 
   <!-- /last section -->
 
-  <section class="last-section">
+  <section class="last-section" id="about">
     <div class="container">
       <div class="row">
         <div class="col-lg-6 order-2 order-md-1">
